# dns-proxy

./: Cargo.toml  README.md
src/: app.rs  cache.rs  cfg.rs  config.rs  dns.rs  error.rs  http.rs  main.rs  packet.rs  proxy.rs  util.rs
src/proxy/: http.rs  https.rs  tls.rs  udp.rs
