[package]
name = "dns-proxy"
version = "0.1.0"
edition = "2021"
authors = ["fakeshadow <24548779@qq.com>"]
description = "simple dns relay proxy"
repository = "https://github.com/fakeshadow/dns-proxy.git"
license = "MIT"
readme = "README.md"

keywords = [
    "dns-proxy",
    "dot",
    "doh"
]

[features]
# feature for DoH proxy.
https = ["xitca-client/http2", "xitca-client/rustls"]
# feature for DoT proxy.
tls = ["http", "tokio/time", "webpki-roots", "xitca-io", "xitca-tls", "xitca-unsafe-collection"]

[dependencies]
bpaf = "0.9"
tokio = { version = "1.37", features = ["net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# optional for DoH.
xitca-client = { version = "0.1", default-features = false, optional = true }

# optional for DoT.
http = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }
xitca-io = { version = "0.2.1", features = ["runtime"], optional = true }
xitca-tls = { version = "0.2.2", features = ["rustls"], optional = true }
xitca-unsafe-collection = { version = "0.1", features = ["bytes"], optional = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros"] }

[patch.crates-io]
xitca-client = { git = "https://github.com/HFQR/xitca-web", rev = "d76b2e188edcbdd801ecb4a7359b4d56070d6dc4" }

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
